[package]
name = "nemo-rust-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.nemo]
package = "nemo"
path = "../"

[dependencies.nemo-sys]
package = "nemo-sys"
path = "../nemo-sys"

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys" # all gtk-rs sys crates are in the sys repository